--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    cursor: pointer;
 }
 
 #search-items::placeholder {
@@ -59,6 +60,7 @@
     font-weight: 400;
     line-height: normal;
     justify-content: center;
+    cursor: pointer;
 }
 .table-items{
     margin-top: 40px;
